# demo

./: main.py  pyproject.toml  requirements.txt
api/: index.py
src/: app.py  qdrant.py
